twitter icon missing, fixed-- change of class name to retrieve from fontawesome, letter-spacing edit for spacing to show

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   </div>  
   
   <div class="share-buttons">
-    <button class="waves-effect waves-light btn" id="new-quote"><i class="fa fa-quote-left" aria-hidden="true"></i>
-QUOTE</button> 
-    <button class="waves-effect waves-light btn" id="tweet-quote"><i class="fa fa-twitter" aria-hidden="true"></i>
-TWEET</button> 
+    <button class="waves-effect waves-light btn" id="new-quote"><i class="fa fa-quote-left" aria-hidden="true"></i> QUOTE</button> 
+    <button class="waves-effect waves-light btn" id="tweet-quote"><i class="fab fa-twitter" aria-hidden="true"></i> TWEET</button> 
   </div>
 </div>
 </body>
